--- a/src/app/contacts/overlay-contacts/overlay-contacts.component.scss
+++ b/src/app/contacts/overlay-contacts/overlay-contacts.component.scss
@@ -141,6 +141,7 @@
                             flex-direction: column;
                             width: 80%;
                             .invalid-input{
+                                height: 12px;
                                 font-size: 12px;
                                 color: red;
                                 padding-top: 5px;
