--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -6,6 +6,7 @@ section {
 
     header {
         width: 100%;
+        max-width: (1920px - 230px);
         height: 100%;
         padding: 0em 5em;
         display: flex;
