--- a/src/app/shared/nav-footer/nav-footer.component.scss
+++ b/src/app/shared/nav-footer/nav-footer.component.scss
@@ -3,7 +3,7 @@ section {
     display: flex;
     flex-direction: column;
     height: 100dvh;
-    width: 15rem;
+    width: 23em;
     background: #2a3647;
     z-index: 5;
     padding: 4.8em 0;
