--- a/src/app/contacts/contacts.component.scss
+++ b/src/app/contacts/contacts.component.scss
@@ -16,13 +16,15 @@
 
 .contact-list-content {
     display: flex;
-    height: auto;
     height: 90%;
 }
 
 .contact-list-component {
     display: flex;
     height: auto;
+    @media (max-width:750px) {
+        width: 100%;
+    }
 }
 
 .info-screen-component {
