--- a/src/app/contacts/overlay-contacts/overlay-contacts.component.scss
+++ b/src/app/contacts/overlay-contacts/overlay-contacts.component.scss
@@ -145,9 +145,10 @@
                                 font-size: 12px;
                                 color: red;
                                 padding-top: 5px;
+                                padding-left: 1em;
                             }
                             input {
-                                margin-top: 30px;
+                                margin-top: 20px;
                                 height: 40px;
                                 border-radius: 10px;
                                 padding: 0 10px;
