--- a/src/app/contacts/info-screen/info-screen.component.scss
+++ b/src/app/contacts/info-screen/info-screen.component.scss
@@ -149,7 +149,7 @@
                 }
 
                 .name-user {
-                    height: 30em;
+                    height: 16em;
                     display: flex;
                     flex-direction: column;
                     justify-content: center;
@@ -204,7 +204,6 @@
 
             //#region detail infos
             .contactinfos {
-                margin-top: 3em;
                 margin-left: 2.2em;
                 font-size: 2em;
                 margin-bottom: 1em;
@@ -336,6 +335,10 @@
 
             p {
                 font-size: 1.5em;
+            }
+
+            .hidden {
+                display: none;
             }
         }
 
