responsive mobile infoscreen
added mediaquerys for mobile infoscreen responsive

--- a/src/app/contacts/info-screen/info-screen.component.scss
+++ b/src/app/contacts/info-screen/info-screen.component.scss
@@ -46,18 +46,46 @@
             .arrow-back {
                 position: absolute;
                 display: none;
+                border: none;
+                background: white;
+                cursor: pointer;
+
+                @media (max-width: 965px) {
+                    left: 26em;
+                    display: block;
+                }
 
                 &:hover {
                     cursor: pointer;
                 }
 
                 @media (max-width: 750px) {
+                    left: 62em;
+                    display: block;
+                }
+
+                @media (max-width: 700px) {
+                    left: 50em;
+                    display: block;
+                }
+
+                @media (max-width: 595px) {
+                    left: 41em;
+                    display: block;
+                }
+
+                @media (max-width: 485px) {
+                    left: 31em;
+                    display: block;
+                }
+
+                @media (max-width: 380px) {
                     left: 25em;
                     display: block;
                 }
 
                 @media (max-width: 330px) {
-                    left: 23em;
+                    left: 24em;
                 }
             }
 
@@ -129,7 +157,7 @@
                         margin-left: 2em;
                     }
 
-                    @media (max-width: 330px) {
+                    @media (max-width: 345px) {
                         width: 7em;
                         height: 7em;
                     }
@@ -153,7 +181,6 @@
                     display: flex;
                     flex-direction: column;
                     justify-content: center;
-                    gap: 10px;
                     align-items: start;
 
                     h2 {
@@ -161,18 +188,21 @@
                         font-weight: 700;
                         margin-left: 0.4em;
 
-                        @media (max-width: 1130px) {
+                        @media (max-width: 1160px) {
                             font-size: 4em;
                         }
 
-                        @media (max-width: 1040px) {
+                        @media (max-width: 1060px) {
                             font-size: 3em;
+                        }
+
+                        @media (max-width: 345px) {
+                            font-size: 2.5em;
                         }
                     }
 
                     .edit-delete {
                         display: flex;
-                        height: 2.5em;
                         margin-left: 3.6em;
                         gap: 1em;
 
@@ -185,10 +215,10 @@
                             display: flex;
                             align-items: center;
                             font-size: 1.8em;
-                            width: 4em;
                             background-color: white;
                             border: none;
                             cursor: pointer;
+
                             transition: color 0.2s ease;
 
                             &:hover {
@@ -209,7 +239,7 @@
                 margin-bottom: 1em;
 
                 @media (max-width: 1075px) {
-                    margin-left: 2em;
+                    margin-left: 1.3em;
                 }
             }
 
@@ -251,7 +281,7 @@
         .edit-mobilebtn {
             position: absolute;
             left: 55em;
-            top: 49em;
+            top: 51em;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -283,7 +313,31 @@
             }
 
             @media (max-width: 1040px) {
-                left: 27.5em;
+                left: 30em;
+            }
+
+            @media (max-width: 1005px) {
+                left: 28em;
+            }
+
+            @media (max-width: 750px) {
+                left: 64em;
+            }
+
+            @media (max-width: 700px) {
+                left: 53em;
+            }
+
+            @media (max-width: 595px) {
+                left: 42.5em;
+            }
+
+            @media (max-width: 485px) {
+                left: 32em;
+            }
+
+            @media (max-width: 380px) {
+                left: 26em;
             }
 
             @media (max-width: 340px) {
@@ -303,6 +357,7 @@
                 border-radius: 20px;
                 border-bottom-right-radius: 0;
                 box-shadow: 6px 4px 10px rgba(0, 0, 0, 0.274);
+                padding: 1em 0.2em;
                 width: 120px;
                 z-index: 100;
                 animation: fade-in-left 0.5s ease-in-out;
@@ -310,8 +365,9 @@
 
             .dropdown-menu div {
                 display: flex;
+                justify-content: center;
                 align-items: center;
-                padding: 1.5em 2em 1.5em 2em;
+                padding: 1em 1em;
                 cursor: pointer;
             }
 
@@ -323,8 +379,6 @@
 
             .dropdown-menu div:hover {
                 background-color: #f0f0f0;
-                border-radius: 20px;
-                border-bottom-right-radius: 0;
             }
 
             .dropdown-menu img {
@@ -336,13 +390,21 @@
             p {
                 font-size: 1.5em;
             }
-
-            .hidden {
-                display: none;
-            }
         }
 
         //#endregion
+    }
+}
+
+@keyframes fade-in-left {
+    0% {
+        opacity: 0;
+        transform: translateX(20em);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0);
     }
 }
 
