--- a/src/app/contacts/contacts.component.scss
+++ b/src/app/contacts/contacts.component.scss
@@ -22,26 +22,33 @@
 .contact-list-component {
     display: flex;
     height: auto;
+
     @media (max-width:750px) {
         width: 100%;
     }
-    @media (min-width: 750px){
+
+    @media (min-width: 750px) {
         display: flex;
     }
 }
 
-.hidden{
+.hidden {
     display: none;
 }
 
 .info-screen-component {
     height: auto;
+    width: 100%;
+
     @media (max-width:750px) {
         display: none;
     }
 }
-.app-info-screen-mobile-component{
-    @media (min-width: 750px){
+
+.app-info-screen-mobile-component {
+    width: 100%;
+
+    @media (min-width: 750px) {
         display: none;
     }
 }
