--- a/src/app/contacts/info-screen/info-screen.component.scss
+++ b/src/app/contacts/info-screen/info-screen.component.scss
@@ -1,8 +1,9 @@
 .wrapper1 {
-    display: flex;
+    width: 100%;
 
     section {
         font-size: 10px;
+        width: 100%;
 
         .content {
             display: flex;
@@ -18,6 +19,7 @@
             display: flex;
             align-items: center;
             flex: 1;
+            width: 100%;
 
             @media (max-width: 1300px) {
                 flex-direction: column;
@@ -50,42 +52,8 @@
                 background: white;
                 cursor: pointer;
 
-                @media (max-width: 965px) {
-                    left: 26em;
-                    display: block;
-                }
-
                 &:hover {
                     cursor: pointer;
-                }
-
-                @media (max-width: 750px) {
-                    left: 62em;
-                    display: block;
-                }
-
-                @media (max-width: 700px) {
-                    left: 50em;
-                    display: block;
-                }
-
-                @media (max-width: 595px) {
-                    left: 41em;
-                    display: block;
-                }
-
-                @media (max-width: 485px) {
-                    left: 31em;
-                    display: block;
-                }
-
-                @media (max-width: 380px) {
-                    left: 25em;
-                    display: block;
-                }
-
-                @media (max-width: 330px) {
-                    left: 24em;
                 }
             }
 
@@ -280,7 +248,6 @@
         //#region mobile edit Button
         .edit-mobilebtn {
             position: absolute;
-            left: 55em;
             top: 51em;
             display: flex;
             justify-content: center;
@@ -297,51 +264,7 @@
             }
 
             @media (max-width: 1260px) {
-                left: 48em;
-            }
-
-            @media (max-width: 1190px) {
-                left: 43em;
-            }
-
-            @media (max-width: 1150px) {
-                left: 38em;
-            }
-
-            @media (max-width: 1090px) {
-                left: 32.5em;
-            }
-
-            @media (max-width: 1040px) {
-                left: 30em;
-            }
-
-            @media (max-width: 1005px) {
-                left: 28em;
-            }
-
-            @media (max-width: 750px) {
-                left: 64em;
-            }
-
-            @media (max-width: 700px) {
-                left: 53em;
-            }
-
-            @media (max-width: 595px) {
-                left: 42.5em;
-            }
-
-            @media (max-width: 485px) {
-                left: 32em;
-            }
-
-            @media (max-width: 380px) {
-                left: 26em;
-            }
-
-            @media (max-width: 340px) {
-                left: 25em;
+                right: 5em;
             }
 
             //#endregion
