branch restore from backup

--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -7,7 +7,6 @@
       <app-info-screen class="info-screen-component"></app-info-screen>
       <app-info-screen-mobile class="app-info-screen-mobile-component hidden"></app-info-screen-mobile>
     </div>
-
   </div>
-
 </div>
+<app-nav-footer-mobile></app-nav-footer-mobile>
