--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,16 +1,14 @@
 <section>
     <div id="overlay" class="hidden" (click)="toggleDropDown()"></div>
     <header>
-        <div class="kanban">Kanban Project Management Tool</div>
+        <div class="kanban"></div>
         <div class="menu">
             <div class="help"></div>
             <span id="user" (click)="toggleDropDown()">HA</span>
         </div>
     </header>
-
     <div id="drop-down" class="hidden">
         <p id="help">Help</p>
-
         <p>Legal Notice</p>
         <p>Privacy Policy</p>
         <p>Log out</p>
