--- a/src/app/contacts/contact-list/contact-list.component.scss
+++ b/src/app/contacts/contact-list/contact-list.component.scss
@@ -217,11 +217,15 @@ section {
 
 
 @media (max-width: 750px) {
-  
+  section {
+    font-size: 9px;
+  }
 }
 
 @media (max-width: 368px) {
-  
+  section {
+    font-size: 9px;
+  }
 }
 @media (min-width: 750px){
   .contactListSection{
